internal-traefik/base/dashboard/middleware-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: internal-traefik
spec:
  basicAuth:
    users:
      - "admin:$2y$05$PDF1Ahb/GajRnmwZRPSflOlxHoF9lyjJ2kGOqjmNiOEwbajPrAI4a"  # admin/password
