internal-traefik/base/dashboard/ingressroute-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: traefik-install
          port: 9000
      middlewares:
        - name: dashboard-auth
  tls:
    secretName: traefik-dashboard-tls
